--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@tailwindcss/vite": "^4.1.10",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
