--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,10 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-autotranscript-*.tar
+atci-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
 
 # config file
-.atconfig
+.atciconfig
