--- a/atci-rust/Cargo.toml
+++ b/atci-rust/Cargo.toml
@@ -12,3 +12,4 @@ globset = "0.4"
 walkdir = "2.0"
 chrono = { version = "0.4", features = ["serde"] }
 regex = "1.0"
+uuid = { version = "1.18.0", features = ["v4"] }
