--- a/atci-rust/Cargo.toml
+++ b/atci-rust/Cargo.toml
@@ -13,3 +13,4 @@ walkdir = "2.0"
 chrono = { version = "0.4", features = ["serde"] }
 regex = "1.0"
 uuid = { version = "1.18.0", features = ["v4"] }
+rust-embed="8.7.2"
