--- a/atci-rust/Cargo.toml
+++ b/atci-rust/Cargo.toml
@@ -15,3 +15,5 @@ regex = "1.0"
 uuid = { version = "1.18.0", features = ["v4"] }
 rust-embed="8.7.2"
 which = "7.0.0"
+reqwest = { version = "0.12", features = ["blocking"] }
+zip = "2.1"
