--- a/atci-rust/Cargo.toml
+++ b/atci-rust/Cargo.toml
@@ -19,3 +19,8 @@ reqwest = { version = "0.12", features = ["blocking"] }
 zip = "2.1"
 rayon = "1.11"
 dialoguer = "0.11"
+
+[dev-dependencies]
+tempfile = "3.0"
+assert_cmd = "2.0"
+predicates = "3.0"
