--- a/atci-rust/Cargo.toml
+++ b/atci-rust/Cargo.toml
@@ -19,6 +19,8 @@ reqwest = { version = "0.12", features = ["blocking"] }
 zip = "2.1"
 rayon = "1.11"
 dialoguer = "0.11"
+rocket = { version = "0.5", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
 
 [dev-dependencies]
 tempfile = "3.0"
