--- a/atci-rust/Cargo.toml
+++ b/atci-rust/Cargo.toml
@@ -8,6 +8,7 @@ clap = { version = "4.5.45", features = ["derive"] }
 confy = "1.0.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+rmp-serde = "1.3"
 globset = "0.4"
 walkdir = "2.0"
 chrono = { version = "0.4", features = ["serde"] }
