--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,11 @@ zip = "2.1"
 rayon = "1.11"
 dialoguer = "0.11"
 rocket = { version = "0.5", features = ["json"] }
+rocket_dyn_templates = { version = "0.2", features = ["handlebars"] }
 tokio = { version = "1", features = ["full"] }
 fs2 = "0.4"
+base64 = "0.22.1"
+urlencoding = "2.1"
 
 [dev-dependencies]
 tempfile = "3.0"
