--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ tokio = { version = "1", features = ["full"] }
 fs2 = "0.4"
 base64 = "0.22.1"
 urlencoding = "2.1"
+sha2 = "0.10.9"
 
 [dev-dependencies]
 tempfile = "3.0"
