--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ sha2 = "0.10.9"
 dirs = "5.0"
 ctrlc = "3.4"
 indicatif = "0.18"
+rusqlite = { version = "0.37.0", features = ["bundled"] }
 
 [dev-dependencies]
 tempfile = "3.0"
