--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,13 +103,27 @@ jobs:
     name: Download URLs
     runs-on: ubuntu-latest
     needs: build
-    if: always() && needs.build.result == 'success'
+    if: always() && needs.build.result == 'success' && github.event_name == 'pull_request'
+    permissions:
+      pull-requests: write
     steps:
-      - name: Output download URLs
-        run: |
-          echo "## Build Artifacts Download URLs"
-          echo "| Platform | Architecture | Download URL |"
-          echo "|----------|--------------|--------------|"
-          echo "| Linux | x86_64 | https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/atci-linux-x86_64 |"
-          echo "| macOS | ARM64 | https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/atci-macos-aarch64 |"
-          echo "| Windows | x86_64 | https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/atci-windows-x86_64.exe |"
+      - name: Post PR comment with download URLs
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const comment = `## 🚀 Build Artifacts Ready!
+
+            | Platform | Architecture | Download URL |
+            |----------|--------------|--------------|
+            | Linux | x86_64 | [atci-linux-x86_64](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/atci-linux-x86_64) |
+            | macOS | ARM64 | [atci-macos-aarch64](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/atci-macos-aarch64) |
+            | Windows | x86_64 | [atci-windows-x86_64.exe](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/atci-windows-x86_64.exe) |
+
+            *Built from commit ${{ github.sha }}*`;
+
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: comment
+            });
