--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,6 +93,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: mv target/${{ matrix.target }}/release/${{ matrix.artifact_name }} target/${{ matrix.target }}/release/${{ matrix.asset_name }}
       - name: Upload build artifact
+        id: upload-artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.asset_name }}
@@ -107,17 +108,29 @@ jobs:
     permissions:
       pull-requests: write
     steps:
-      - name: Post PR comment with download URLs
+      - name: Get artifact IDs and post PR comment
         uses: actions/github-script@v7
         with:
           script: |
+            // Get all artifacts for this workflow run
+            const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: context.runId,
+            });
+
+            // Find artifact IDs by name
+            const linuxArtifact = artifacts.data.artifacts.find(a => a.name === 'atci-linux-x86_64');
+            const macosArtifact = artifacts.data.artifacts.find(a => a.name === 'atci-macos-aarch64');
+            const windowsArtifact = artifacts.data.artifacts.find(a => a.name === 'atci-windows-x86_64.exe');
+
             const comment = `## 🚀 Build Artifacts Ready!
 
             | Platform | Architecture | Download URL |
             |----------|--------------|--------------|
-            | Linux | x86_64 | [atci-linux-x86_64](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/atci-linux-x86_64) |
-            | macOS | ARM64 | [atci-macos-aarch64](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/atci-macos-aarch64) |
-            | Windows | x86_64 | [atci-windows-x86_64.exe](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/atci-windows-x86_64.exe) |
+            | Linux | x86_64 | [atci-linux-x86_64](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${linuxArtifact?.id || 'not-found'}) |
+            | macOS | ARM64 | [atci-macos-aarch64](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${macosArtifact?.id || 'not-found'}) |
+            | Windows | x86_64 | [atci-windows-x86_64.exe](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${windowsArtifact?.id || 'not-found'}) |
 
             *Built from commit ${{ github.sha }}*`;
 
