only make builds for pull requests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,7 @@ jobs:
 
   build:
     name: Build
+    if: github.event_name == 'pull_request'
     strategy:
       fail-fast: false
       matrix:
