--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ ctrlc = "3.4"
 indicatif = "0.18"
 rusqlite = { version = "0.37.0", features = ["bundled"] }
 self_update = { version = "0.42", features = ["archive-zip"] }
+ratatui = "0.30.0-alpha.5"
+crossterm = "0.28"
 
 [dev-dependencies]
 tempfile = "3.0"
