--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ ratatui = "0.29.0"
 crossterm = "0.28"
 image = "0.25.8"
 ratatui-image = "8.0.1"
+clipboard-rs = "0.2"
 
 [dev-dependencies]
 tempfile = "3.0"
