--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ which = "7.0.0"
 reqwest = { version = "0.12", features = ["blocking"] }
 zip = "2.1"
 rayon = "1.11"
+rand = "0.8"
 dialoguer = "0.11"
 rocket = { version = "0.5", features = ["json"] }
 rocket_dyn_templates = { version = "0.2", features = ["handlebars"] }
