--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ ratatui-image = "8.0.1"
 clipboard-rs = "0.2"
 throbber-widgets-tui = "0.9"
 tui-big-text = "0.7"
+open = "5.3"
 
 [dev-dependencies]
 tempfile = "3.0"
