--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ clipboard-rs = "0.2"
 throbber-widgets-tui = "0.9"
 tui-big-text = "0.7"
 open = "5.3"
+tui-scrollview = "0.5.1"
+ratatui-explorer = "0.1.3"
 
 [dev-dependencies]
 tempfile = "3.0"
